# orkes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dual_inspector.html  inspector_raw.py  notes  pyproject.toml  readthedocs.yaml  requirement.txt  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/: orkes_footer.html
orkes/agents/: actions.py  core.py  docs.md  react.py  schema.py
orkes/graph/: core.py  docs.md  runner.py  schema.py  unit.py  utils.py
orkes/services/: __init__.py  connections.py  connectors.py  docs.md  responses.py  schema.py  strategies.py
orkes/shared/: __init__.py  context.py  schema.py  utils.py
orkes/visualizer/: generator.py  inspector_template.html
src/: connections.py  prompts.py  responses.py  stream.py
src/agents/: actions.py  core.py
src/orkes/: __init__.py  core.py  unit.py  utils.py
src/services/: connections.py  prompts.py  responses.py
test/: action_test.py  agent_test.py  agentic_test.py  graph_test.py  prompt_test.py
tests/: run_all_tests.py
tests/examples/: agent_test.py  graph_service_test.py  graph_test.py
tests/integration_test/: test_connections.py  test_connections_live.py  test_connections_mocks.py  test_graph_visualization.py  test_llm_trace_race_condition.py  test_memory_usage.py  test_mock_server_streaming.py  test_react_agent.py  test_schema_handling.py
tests/legacy/: action_test.py  agent_test.py  agentic_test.py  core.py  prompts.py
tests/mock_servers/: mock_llm_server.py  mock_server_streaming_test.py
tests/unit_test/: test_utils.py
(+20 files in other folders)
