[project]
name = "orkes"
version = "0.1.3"
description = "A lightweight orchestration framework for LLM agents, no abstractions you don’t need, no bloated APIs, just clean coordination logic that works."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hasby Fahrudin", email = "fahrudinhasby12@gmail.com" }
]
dependencies = [
  "pydantic>=2.0",
  "aiohttp"
]

# Optional dependencies are installed via `pip install ".[<group_name>]"`
# For example, `pip install ".[dev]"` or `pip install ".[docs]"`
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-html",
    "memory-profiler",
    "psutil",
    "fastapi",
    "uvicorn",
    "python-dotenv"
]
docs = [
    "sphinx",
    "sphinxcontrib-mermaid",
    "sphinx-copybutton",
    "autodoc_pydantic",
    "pydata-sphinx-theme"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/hfahrudin/orkes"
"Documentation" = "https://your-docs-url.com" # Placeholder for your documentation URL


[tool.setuptools]
# Fixed: Explicitly include only the orkes package to ignore 'assets'
packages = ["orkes"]
